# irradiate

./: .gitignore  .hive.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  action.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.cargo/: mutants.toml
.github/workflows/: bench.yml  ci.yml  compat.yml  docs.yml  fuzz.yml  mutation-testing.yml  release.yml  report.yml
.hive/: .gitignore  project-context.md  queen-context.md
bench/: README.md  compare.sh  run_all.sh  setup.sh  summarize.py
bench/targets/: click.sh  itsdangerous.sh  markupsafe.sh  marshmallow.sh  more-itertools.sh  my_lib.sh  simple_project.sh  synth.sh  tinygrad.sh  toolz.sh
bench/targets/synth/: pyproject.toml
bench/targets/synth/src/synth/: __init__.py  data_ops.py  math_ops.py  string_ops.py  validators.py
bench/targets/synth/tests/: test_data.py  test_math.py  test_strings.py  test_validators.py
docs/: cursor-position-problem.md  design.md  import-hook-design.md  index.md  mkdocs.yml  mutation-operators.md  mutation-pruning.md  roadmap.md  spec.md  super-cell-problem.md  trampoline.md
docs/blog/: .authors.yml
docs/blog/posts/: what-is-mutation-testing.md
docs/getting-started/: configuration.md  install.md  installation.md  quickstart.md
docs/guide/: ci-integration.md  comparison.md  performance.md  remote-cache.md  surviving-mutants.md  understanding-results.md  when-to-use.md
docs/internals/: architecture.md  contributing.md  decorators.md  import-hook.md  known-issues.md  markupsafe-benchmark-notes.md  markupsafe-perf-analysis.md  mutation-operators.md  mutation-pruning.md  regex-mutation-plan.md  trampoline.md
docs/reference/: cli.md
examples/: mutate_file.rs  spike_libcst.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_generate_trampoline/: seed_class_super.py  seed_future_docstring.py
fuzz/corpus/fuzz_mutate_file/: seed_complex_generics.py  seed_generator.py
fuzz/corpus/fuzz_parse_param_names/: seed_all_kinds  seed_complex_types  seed_generic_posonly  seed_inline_comment  seed_kw_only  seed_positional  seed_self_only  seed_simple_method  seed_varargs_only
fuzz/fuzz_targets/: fuzz_generate_trampoline.rs  fuzz_mutate_file.rs  fuzz_mutation.rs  fuzz_parse_param_names.rs
harness/: __init__.py  fast_stats_plugin.py  import_hook.py  stats_plugin.py  worker.py
scripts/: analyze_trace.py  bootstrap-vendors.sh  compat-manifest.json  compat-sweep.sh  gen-cli-docs.sh  generate_report.py  install-hooks.sh  lima-bench.sh  loc.sh  pre-commit  run_vendor_tests.sh
src/: cache.rs  codegen.rs  config.rs  git_diff.rs  harness.rs  lib.rs  main.rs  mutation.rs  mutation_tests.rs  orchestrator.rs  pipeline.rs  progress.rs  protocol.rs  regex_mutation.rs  report.rs  stats.rs  string_scanner.rs  trace.rs  trampoline.rs  tree_sitter_mutation.rs  type_check.rs
tests/: e2e.sh  proptest_mutation.proptest-regressions  proptest_mutation.rs  vendor_test.sh  worker_pool_integration.rs
tests/fixtures/async_gen_project/: pyproject.toml
tests/fixtures/async_gen_project/async_stream/: __init__.py
tests/fixtures/async_gen_project/tests/: test_stream.py
tests/fixtures/crash_worker_project/tests/: test_crash.py
tests/fixtures/decorator_project/: pyproject.toml
tests/fixtures/decorator_project/src/deco_lib/: __init__.py
tests/fixtures/decorator_project/tests/: test_deco.py
tests/fixtures/regex_project/src/validators/: __init__.py
tests/fixtures/regex_project/tests/: test_validators.py
tests/fixtures/simple_project/: pyproject.toml
tests/fixtures/simple_project/mutants/simple_lib/: __init__.py
tests/fixtures/simple_project/src/simple_lib/: __init__.py
tests/fixtures/simple_project/tests/: test_simple.py
tests/fixtures/timeout_project/src/timeout_lib/: __init__.py
tests/fixtures/timeout_project/tests/: test_timeout_lib.py
tests/fixtures/typed_project/src/typed_lib/: __init__.py
tests/fixtures/typed_project/tests/: test_typed.py
tests/harness_tests/: conftest.py  test_import_hook.py  test_init.py  test_stats_plugin.py  test_worker.py
