[package]
name = "irradiate"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
rayon = "1.10"
tree-sitter = "0.25.10"
tree-sitter-python = "0.23.6"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
proptest = "1"
libcst = { version = "1.8.6", default-features = false }
