[package]
name = "irradiate"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Fast mutation testing for Python"
authors = ["nwyin"]
repository = "https://github.com/nwyin/irradiate"
homepage = "https://nwyin.github.io/irradiate"
keywords = ["mutation-testing", "python", "testing"]
categories = ["development-tools::testing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
rayon = "1.10"
tree-sitter = "0.25.10"
tree-sitter-python = "0.23.6"
sha2 = "0.10"
regex-syntax = "0.8"
libc = "0.2"
rand = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3"
proptest = "1"
filetime = "0.2"
