[package]
name = "irradiate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.irradiate]
path = ".."

[[bin]]
name = "fuzz_mutation"
path = "fuzz_targets/fuzz_mutation.rs"
test = false
doc = false

[workspace]
