[package]
name = "irradiate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.irradiate]
path = ".."

[[bin]]
name = "fuzz_mutation"
path = "fuzz_targets/fuzz_mutation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mutate_file"
path = "fuzz_targets/fuzz_mutate_file.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_param_names"
path = "fuzz_targets/fuzz_parse_param_names.rs"
test = false
doc = false

[[bin]]
name = "fuzz_generate_trampoline"
path = "fuzz_targets/fuzz_generate_trampoline.rs"
test = false
doc = false

[workspace]
