[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synth"
version = "0.1.0"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/synth"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mutmut]
paths_to_mutate = "src/synth"
tests_dir = "tests/"
